# gcp-tf-iam

./: .gitignore  README.md  all_conditions_report.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
examples/sample_deploy/: main.tf  variables.tf
scripts/: hydrate_fallback.py
src/tf_iam/: fallback_map.json  rules_engine.py  tf_runner.py  tool.py
tests/: test_rules_engine.py  test_tool.py
